5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1723_2508.log
== TEST (2019-05-12 16:03:26) 
-- CODE:
n=int(input("digite um numero:"))
i=1
soma=1
while(i<n):
	soma=soma+(-1)**i*2*i+1/i+1*i+2*i*i+3*i
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
107.08333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:10:55) 
-- CODE:
n=int(input("digite um numero:"))
i=1
soma=1
while(i<n):
	soma=soma+(-1)**i*2*i+1/2*i*3*i*4*i
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
605.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:12:08) 
-- CODE:
n=int(input("digite um numero:"))
i=1
soma=1
while(i<n):
	soma=soma+(-1)**i*i/2*i*i+1*3*i*4*i
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
383.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:12:25) 
-- CODE:
n=int(input("digite um numero:"))
i=1
soma=1
while(i<n):
	soma=soma+(-1)**i*i/2*i*i+1*3*i*4*i
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
383.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:29:01) 
-- CODE:
n=int(input("digite um numero:"))
i=1
soma=1
while(i<n):
	soma=soma+(-1)**i*i/2*i*i+1*3*i*4*i
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
383.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:30:12) 
-- CODE:
n=int(input("digite um numero:"))
i=1
soma=1
while(i<n):
	soma=soma+(-1)**i*i/2*i*i*3*i*4
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
1141.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:30:40) 
-- CODE:
n=int(input("digite um numero:"))
i=0
soma=0
while(i<n):
	soma=soma+(-1)**i*i/2*i*i*3*i*4
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
1140.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:32:02) 
-- CODE:
n=int(input("digite um numero:"))
i=0
soma=0
while(i<n):
	soma=soma+(-1)**i*3*(4/2*i*i*3*i*4)
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
3168.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:33:54) 
-- CODE:
n=int(input("digite um numero:"))
i=0
soma=0
while(i<n):
	soma=soma+(-1)**i*3*4/2*i*i*3*i*4
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
3168.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:46:11) 
-- CODE:
n=int(input("digite um numero:"))
i=1
soma=1
while(i<n):
	soma=soma+(-1)**i*3*4/2*i*i*3*i*4
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
3169.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:22:05) 
-- CODE:
n=int(input("digite um numero:"))
i=1
soma=1
while(i<n):
	soma=soma+(-1)**i/2*i*i*3*i*4
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
265.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:23:02) 
-- CODE:
n=int(input("digite um numero:"))
i=0
soma=0
while(i<n):
	soma=soma+(-1)**i/2*i*i*3*i*4
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
264.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:23:59) 
-- CODE:
n=int(input("digite um numero:"))
i=0
soma=0
while(i<n):
	soma=soma+(-1)**i/(2*i)*(i*3)*(i*4)
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+(-1)**i/(2*i)*(i*3)*(i*4)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:24:41) 
-- CODE:
n=int(input("digite um numero:"))
i=1
soma=1
while(i<n):
	soma=soma+(-1)**i/(2*i)*(i*3)*(i*4)
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
13.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:28:21) 
-- CODE:
n=int(input("digite um numero:"))
i=0
soma=0
while(i<n):
	soma=soma+(-1)**i*3/(2*i)*(i*3)*(i*4)
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+(-1)**i*3/(2*i)*(i*3)*(i*4)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:28:38) 
-- CODE:
n=int(input("digite um numero:"))
i=1
soma=0
while(i<n):
	soma=soma+(-1)**i*3/(2*i)*(i*3)*(i*4)
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
36.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:45:46) 
-- CODE:
n=int(input("digite um numero:"))
i=2
soma=3
while(i<n):
	soma=soma+4(1)**i/i*i+1*i+2
	i=i+1
	n=n-1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+4(1)**i/i*i+1*i+2
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:46:59) 
-- CODE:
n=int(input("digite um numero:"))
i=0
soma=3
while(i<n):
	soma=soma+4(-1)**i/i*i+1*i+2
	i=i+1
	n=n-1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+4(-1)**i/i*i+1*i+2
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:47:44) 
-- CODE:
n=int(input("digite um numero:"))
i=0
soma=3
while(i<n):
	soma=soma+4(-1)**i/i*i+1*i+2
	i=i+1
	n=n-1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+4(-1)**i/i*i+1*i+2
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:47:55) 
-- CODE:
n=int(input("digite um numero:"))
i=0
soma=3
while(i<n):
	soma=soma+4(-1)**i/i*i+1*i+2
	i=i+1
	n=n-1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+4(-1)**i/i*i+1*i+2
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:49:33) 
-- CODE:
n=int(input("digite um numero:"))
i=2
soma=3
while(i<n):
	soma=soma+4/i*i+1*i+2
	i=i+1
	n=n-1
	
print(round(soma,8))
-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:51:40) 
-- CODE:
n=int(input("digite um numero:"))
i=2
soma=3
while(i<n):
	soma=soma+(4/i*i+1*i+2)*(-1)**i
	i=i+1
	n=n-1
	
print(round(soma,8))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:52:15) 
-- CODE:
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(i<n):
	soma=soma+(4/i*i+1*i+2)*(-1)**j
	i=i+1
	n=n-1
	
print(round(soma,8))
-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:52:58) 
-- CODE:
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(i<n):
	soma=soma+(4/i*i+1*i+2)*(-1)**j
	i=i+1
	n=n-1
	j=j+1
	
print(round(soma,8))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:53:44) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(i<n):
	soma=soma+(4/i*i+1*i+2)*(-1)**j
	i=i+1
	n=n-1
	j=j+1
	
print(round(soma,8))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:54:24) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=0
soma=3

while(i<n):
	soma=soma+(4/i*i+1*i+2)*(-1)**i
	i=i+1
	n=n-1
	j=j+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+(4/i*i+1*i+2)*(-1)**i
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:55:06) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=0
soma=3

while(i<n):
	soma=soma+(4/(i*i+1*i+2)*(-1)**i)+1
	i=i+1
	n=n-1
	j=j+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    j=j+1
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:55:29) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=0
soma=3

while(i<n):
	soma=soma+(4/(i*i+1*i+2)*(-1)**i)+1
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:55:46) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=0
soma=0

while(i<n):
	soma=soma+(4/(i*i+1*i+2)*(-1)**i)+1
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:57:14) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=0
soma=0

while(i<n):
	soma=soma+(4*i/(i*i+1*i+2)*(-1)**i)
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:57:29) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=0
soma=3

while(i<n):
	soma=soma+(4*i/(i*i+1*i+2)*(-1)**i)
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:02:30) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=0
soma=3

while(i<n):
	soma=soma+(4/((i*(i+1)*(i+2)*(-1)**i)
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:03:06) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=0
soma=3

while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2)*(-1)**i)
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:04:07) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=0
soma=3

while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2)*(-1)**i))
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+(4/(i*(i+1)*(i+2)*(-1)**i))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:04:20) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3

while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2)*(-1)**i))
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- OUTPUT:
3.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:07:39) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2)*(-1)**j))
	i=i+1
	n=n-1
	j=j+1
	
	
print(round(soma,8))
-- OUTPUT:
3.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:09:14) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2)))*(-1)**j
	i=i+1
	n=n-1
	j=j+1
	
	
print(round(soma,8))
-- OUTPUT:
3.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:09:55) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2)))*(-1)**j
	i=i+1
	j=j+1
	n=n-1

	
	
print(round(soma,8))
-- OUTPUT:
3.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:12:52) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2)))*(-1)**j
	i=i+2
	j=j+1
	n=n-1

	
	
print(round(soma,8))
-- OUTPUT:
3.16666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:19:48) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2)))*(-1)**j
	i=i+2
	j=j+1
	n=n-1

	
	
print(round(soma,8))
-- OUTPUT:
3.16666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:20:18) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2)))*(-1)**j
	i=i+2
	j=j+1
	n=n-1

	
	
print(round(soma,8))
-- OUTPUT:
3.16666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:20:29) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2)))*(-1)**j
	i=i+2
	j=j+1
	n=n-1

	
	
print(round(soma,8))
-- OUTPUT:
3.16666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:21:20) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(1<n):
	soma=soma+(4/(i*(i+1)*(i+2)))*(-1)**j
	i=i+2
	j=j+1
	n=n-1

	
	
print(round(soma,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:21:33) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(1<n):
	soma=soma+(4/(i*(i+1)*(i+2)))*(-1)**j
	i=i+2
	j=j+1
	n=n-1

	
	
print(round(soma,8))
-- EXECUTION TIME:
0.146345
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:55:54) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(1<n):
	soma=soma+(4/(i*(i+1)*(i+2)))*(-1)**j
	i=i+2
	j=j+1
	n=n-1

	
	
print(round(soma,8))
-- EXECUTION TIME:
0.183287
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:56:11) 
-- CODE:
from math import*
n=int(input("digite um numero:"))
i=2
soma=3
j=0
while(1<n):
	soma=soma+(4/(i*(i+1)*(i+2)))*(-1)**j
	i=i+2
	j=j+1
	n=n-1

	
	
print(round(soma,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:42:08) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=0
while(i<k):
	soma=soma+((-1)**i*4/((i*2)*(i*2+1)*(i*2+2))
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:42:25) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=0
while(i<k):
	soma=soma+((-1)**i*4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma=soma+((-1)**i*4/((i*2)*(i*2+1)*(i*2+2)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:42:45) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
while(i<k):
	soma=soma+((-1)**i*4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma,8))
-- OUTPUT:
3.02698413
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:43:12) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=1
while(i<k):
	soma=soma+((-1)**i*4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma,8))
-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:46:32) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=1
j=0
while(i<k):
	soma=soma+((-1)**j*4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma,8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:47:05) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=1
j=0
while(i<k):
	soma=soma+((-1)**j*4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.214515
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.21746032
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.22689488
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.226719
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:47:12) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=1
j=0
while(i<k):
	soma=soma+((-1)**j*4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.240589
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.21746032
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.22689488
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.226719
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:47:15) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=1
j=0
while(i<k):
	soma=soma+((-1)**j*4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma,8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:47:28) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=1
j=0
while(i<k):
	soma=soma+((-1)**j*4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma,8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:47:52) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=1
j=0
while(i<k):
	soma=soma+((-1)**j*4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma,8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:48:10) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=1
j=0
while(i<k):
	soma=soma+((-1)**j*4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma,8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:10:02) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(i<k):
	soma=soma+(4/i*(1+i)*(i+2)*(-i)**j
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.123615
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 8
    i=i+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:10:52) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/i*(1+i)*(i+2)*(-i)**j
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:11:07) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/i*(1+i)*(i+2)*(-i)**j)
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:12:07) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/i*(1+i)*(i+2)*(-i)**j)
	i=i+1
	j=j+1
	k=k-1
print(round(soma,8))
-- OUTPUT:
-3773.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:13:04) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/(i*(1+i)*(i+2)))*(-i)**j
	i=i+2
	j=j+1
	k=k-1
print(round(soma,8))
-- EXECUTION TIME:
0.353717
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
0.61746032
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
1.4527240604461718e+28
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-2.2348375573273718e+22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:13:55) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/(i*(1+i)*(i+2)))*(-i)**j
	i=i+2
	j=j+1
	k=k-1
	
print(round(soma,8))
-- OUTPUT:
0.61746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:14:07) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/(i*(1+i)*(i+2)))*(-i)**j
	i=i+2
	j=j+1
	k=k-1
	
print(round(soma,8))
-- EXECUTION TIME:
0.301196
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
0.61746032
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
1.4527240604461718e+28
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-2.2348375573273718e+22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:18:02) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/i*(1+i)*(i+2)*(-i)**j)
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
397.475
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:43:09) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/(i*(1+i)*(i+2)))*(-i)**j
	i=i+2
	j=j+1
	k=k-1
	
print(round(soma,8))
-- OUTPUT:
0.61746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:43:20) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/(i*(1+i)*(i+2)))*(-i)**j
	i=i+2
	j=j+1
	k=k-1
	
print(round(soma,8))
-- EXECUTION TIME:
0.240117
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
0.61746032
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
1.4527240604461718e+28
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-2.2348375573273718e+22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:33:43) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/(i*(1+i)*(i+2)))*(-i)**j
	i=i+2
	j=j+1
	k=k-1
	
print(round(soma,8))
-- OUTPUT:
0.61746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:33:58) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/(i*(1+i)*(i+2)))*(-i)**j
	i=i+2
	j=j+1
	k=k-1
	
print(round(soma,8))
-- EXECUTION TIME:
0.194698
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
0.61746032
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
1.4527240604461718e+28
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-2.2348375573273718e+22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:58:29) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
soma=3
i=2
j=0
while(1<k):
	soma=soma+(4/(i*(1+i)*(i+2)))*(-i)**j
	i=i+2
	j=j+1
	k=k-1
	
print(round(soma,8))
-- OUTPUT:
0.61746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
